# Sentiment-Based-Recommendation-Engine

./: .env  .gitignore  LICENSE  README.md  database-schema.sql  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
alembic/: __init__.py
backend/: README.md  alembic.ini  test_db_connection.py
backend/alembic/: env.py
backend/alembic/versions/: 2211152f7359_sync_with_existing_schema.py  add_average_rating_to_services.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  auth.py  categories.py  providers.py  recommendations.py  reviews.py  services.py  users.py
backend/app/auth/: dependencies.py
backend/app/core/: config.py  security.py
backend/app/models/: database.py  example.py  models.py  sync_database.py
backend/app/services/: sentiment.py
backend/docs/: schema.sql
backend/scripts/: init_db.py
backend/test_data/: README.md  populate_test_data.py
backend/test_data/categories/: service_categories.json
backend/test_data/providers/: provider_profiles.json
backend/test_data/reviews/: reviews.json
backend/test_data/services/: services.json
backend/test_data/users/: admin.json  customers.json  providers.json
docker/: backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
docs/: README.md  system_design.md
frontend/: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: _app.tsx  index.tsx  login.tsx  register.tsx
test_data/: README.md  populate_test_data.py
test_data/users/: providers.json
(+38 files in other folders)
